[gd_scene load_steps=24 format=2]

[ext_resource path="res://Backgrounds/workspace png.png" type="Texture" id=1]
[ext_resource path="res://Backgrounds/tela chat pronta.png" type="Texture" id=2]
[ext_resource path="res://cena2_CHAT.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Default_chat.gd" type="Script" id=5]
[ext_resource path="res://Mike_chat.gd" type="Script" id=6]
[ext_resource path="res://videos/mapa-escola-label.webm" type="VideoStream" id=7]
[ext_resource path="res://Fonts/DotGothic16-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="DynamicFont" id=8]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=21]
default_font = SubResource( 20 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Square.ttf"

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Square.ttf"

[sub_resource type="DynamicFont" id=5]
size = 15
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 42
outline_color = Color( 0.0156863, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 13 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background_xp" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.267708, 0.27963 )
texture = ExtResource( 1 )

[node name="Mike_chat" type="ColorRect" parent="."]
margin_left = 358.0
margin_top = 310.0
margin_right = 762.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 75, 92 )
script = ExtResource( 6 )

[node name="Text" type="RichTextLabel" parent="Mike_chat"]
margin_left = 18.0
margin_top = 10.0
margin_right = 402.0
margin_bottom = 90.0
theme = SubResource( 19 )
custom_colors/default_color = Color( 1, 0, 0, 1 )

[node name="Timer" type="Timer" parent="Mike_chat"]
wait_time = 0.855
one_shot = true

[node name="Default_chat" type="ColorRect" parent="."]
margin_left = 360.0
margin_top = 143.0
margin_right = 764.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 75, 92 )
script = ExtResource( 5 )
dialogPath = "res://Dialog.json"

[node name="Name" type="RichTextLabel" parent="Default_chat"]
margin_left = 16.0
margin_top = 9.0
margin_right = 120.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( -360, 56 )
theme = SubResource( 9 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "D3F4ULT:"

[node name="Text" type="RichTextLabel" parent="Default_chat"]
margin_left = 16.0
margin_top = 33.0
margin_right = 394.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( -360, 56 )
theme = SubResource( 21 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
visible_characters = 0

[node name="Timer" type="Timer" parent="Default_chat"]
one_shot = true

[node name="box_chat" type="Sprite" parent="."]
position = Vector2( 512, 282 )
scale = Vector2( 0.267593, 0.262037 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 923.0
margin_top = 572.0
margin_right = 964.0
margin_bottom = 599.0

[node name="time_label" type="Label" parent="VBoxContainer"]
margin_right = 41.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "10:10"

[node name="date_label" type="Label" parent="."]
margin_left = 822.0
margin_top = 578.0
margin_right = 918.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 5 )
text = "08/04/2023"

[node name="Enviar" type="Button" parent="."]
self_modulate = Color( 0.104004, 0.00365639, 0.00365639, 0 )
margin_left = 678.0
margin_top = 420.0
margin_right = 763.0
margin_bottom = 442.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Enviar"]
modulate = Color( 0.309804, 0.0392157, 0.0392157, 1 )
margin_left = 31.0
margin_top = 3.0
margin_right = 80.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "Enviar"

[node name="nick_d3f4ult" type="Label" parent="."]
margin_left = 264.0
margin_top = 228.0
margin_right = 330.0
margin_bottom = 246.0
custom_colors/font_color = Color( 0.207843, 0, 0.415686, 1 )
custom_fonts/font = SubResource( 7 )
text = "D3F4ULT"

[node name="nick_mike" type="Label" parent="."]
margin_left = 264.0
margin_top = 391.0
margin_right = 334.0
margin_bottom = 409.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "MIIKE_182"

[node name="Cutscene_Escola" type="VideoPlayer" parent="."]
margin_right = 1032.0
margin_bottom = 608.0
stream = ExtResource( 7 )

[node name="sair_do_chat" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 768.0
margin_top = 96.0
margin_right = 800.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2

[node name="Popup_Menu" type="Control" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Popup_Menu"]
self_modulate = Color( 0, 0, 0, 0.854902 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main_Menu" type="Label" parent="Popup_Menu"]
margin_left = 368.0
margin_top = 192.0
margin_right = 653.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 10 )
text = "jogo pausado"

[node name="Menu" type="Button" parent="Popup_Menu"]
margin_left = 432.0
margin_top = 280.0
margin_right = 600.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 128, 20 )
mouse_default_cursor_shape = 2
theme = SubResource( 12 )
text = "Continuar"

[node name="Menu2" type="Button" parent="Popup_Menu"]
margin_left = 432.0
margin_top = 344.0
margin_right = 600.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 128, 20 )
mouse_default_cursor_shape = 2
theme = SubResource( 12 )
text = "Sair do jogo"

[connection signal="timeout" from="Mike_chat/Timer" to="Mike_chat" method="_on_Timer_timeout"]
[connection signal="timeout" from="Default_chat/Timer" to="Default_chat" method="_on_Timer_timeout"]
[connection signal="pressed" from="Enviar" to="Mike_chat" method="_on_Enviar_pressed"]
[connection signal="pressed" from="Enviar" to="Default_chat" method="_on_Enviar_pressed"]
[connection signal="finished" from="Cutscene_Escola" to="." method="_on_Cutscene_Escola_finished"]
[connection signal="pressed" from="sair_do_chat" to="." method="_on_sair_do_chat_pressed"]
[connection signal="pressed" from="Popup_Menu/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Popup_Menu/Menu2" to="." method="_on_Menu2_pressed"]
